--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.CinemaApp"
         tools:targetApi="31">
         <activity
+            android:screenOrientation="portrait"
             android:name=".Ticket"
             android:exported="false">
             <meta-data
@@ -20,6 +21,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".FilmScreen"
             android:exported="false">
             <meta-data
@@ -27,6 +29,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainScreen"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -35,6 +38,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".Register"
             android:exported="false">
             <meta-data
@@ -42,6 +46,7 @@
                 android:value="" />
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
